<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Pizza App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="pizza_menu">MENU</string>
    <string name="name_field">Enter your name</string>
    <string name="topping_field">Select your Toppings:</string>
    <string name="peppers_field">Peppers</string>
    <string name="onions_field">Onions</string>
    <string name="olives_field">Olives</string>
    <string name="tomatoes_field">Tomatoes</string>
    <string name="quantity_field">Quantity:</string>
    <string name="initial_quantity_value">1</string>

    <!-- For Pizza Order Summary -->
    <string name="order_summary_name">Name:<xliff:g id="name" example="Eswar">%s</xliff:g></string>
    <string name="order_summary_peppers"><b>Peppers: </b><xliff:g id="addPeppers" example="Yes">%s</xliff:g></string>
    <string name="order_summary_onions"><b>Onions: </b><xliff:g id="addOnions" example="Yes">%s</xliff:g></string>
    <string name="order_summary_olives"><b>Olives: </b><xliff:g id="addOlives" example="yes">%s</xliff:g></string>
    <string name="order_summary_tomatoes"><b>Tomatoes: </b><xliff:g id="addTomatoes" example="yes">%s</xliff:g></string>
    <string name="order_summary_quantity"><b>Quantity: </b><xliff:g id="quantity" example="1">%d</xliff:g></string>
    <string name="order_summary_total_price"><b>Total: </b>$ <xliff:g id="price" example="10">%.2f</xliff:g></string>
    <string name="thank_you"><b>Thank you!</b></string>

    <string name="summaryMessage"><u>Your Order Summary</u></string>

</resources>