<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:background="@drawable/bg2"
    tools:context=".Order_Pizza">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="165dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginEnd="232dp"
        android:layout_marginRight="232dp"
        android:layout_marginBottom="540dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/pizza_menu"
        android:textAllCaps="true"
        android:textColor="#F8F3F3"
        android:textSize="24sp"
        android:textStyle="bold|italic" />



    <EditText
        android:id="@+id/name"
        android:layout_width="183dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"

        android:layout_alignParentBottom="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginEnd="210dp"
        android:layout_marginRight="210dp"
        android:layout_marginBottom="491dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:forceDarkAllowed="false"
        android:hint="@string/name_field"
        android:inputType="textEmailAddress"
        android:singleLine="false"
        android:textColorHint="#8A8585"
        android:textStyle="bold"
        tools:targetApi="lollipop" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="125dp"
        android:layout_marginBottom="454dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:spinnerMode="dropdown"
        android:textColor="#ff0000"
        android:theme="@style/ThemeOverlay.AppCompat.Light"/>

    <CheckBox
        android:id="@+id/peppers_checkbox"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginEnd="263dp"
        android:layout_marginRight="263dp"
        android:layout_marginBottom="374dp"
        android:checked="false"
        android:text="@string/peppers_field"
        android:textColor="#FDFCFC"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/onions_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="181dp"
        android:layout_marginLeft="181dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="374dp"
        android:text="@string/onions_field"
        android:textColor="#FDFCFC"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/olives_checkbox"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginEnd="253dp"
        android:layout_marginRight="253dp"
        android:layout_marginBottom="335dp"
        android:text="@string/olives_field"
        android:textColor="#FDFCFC"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="175dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="236dp"
        android:layout_marginRight="236dp"
        android:layout_marginBottom="405dp"
        android:gravity="center_vertical"
        android:text="@string/topping_field"
        android:textColor="#FBF6F6"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <CheckBox
        android:id="@+id/tomatoes_checkbox"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="189dp"
        android:layout_marginLeft="189dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:layout_marginBottom="329dp"
        android:text="@string/tomatoes_field"
        android:textColor="#FDFCFC"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginEnd="287dp"
        android:layout_marginRight="287dp"
        android:layout_marginBottom="230dp"
        android:gravity="center_vertical"
        android:text="@string/quantity_field"
        android:textColor="#FBF7F7"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/more"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="252dp"
        android:layout_marginLeft="252dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:layout_marginBottom="223dp"
        android:background="@drawable/rounded_button"
        android:onClick="more"
        android:text="+"
        android:textSize="18sp"
        android:textStyle="normal"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/less"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="159dp"
        android:layout_marginLeft="159dp"
        android:layout_marginEnd="209dp"
        android:layout_marginRight="209dp"
        android:layout_marginBottom="222dp"
        android:background="@drawable/rounded_button"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="less"
        android:text="-"
        android:textIsSelectable="false"
        android:textSize="24sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="38dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="208dp"
        android:layout_marginLeft="208dp"
        android:layout_marginEnd="165dp"
        android:layout_marginRight="165dp"
        android:layout_marginBottom="228dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/initial_quantity_value"
        android:textColor="#F4EFEF"
        android:textSize="20sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/orderPizzaCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/orderSummary"
        android:layout_alignRight="@+id/orderSummary"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        android:layout_marginBottom="94dp"
        android:background="@drawable/rounded_button"
        android:onClick="orderPizzaMain"
        android:text="Order" />

    <Button
        android:id="@+id/orderSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginEnd="171dp"
        android:layout_marginRight="171dp"
        android:layout_marginBottom="93dp"
        android:background="@drawable/rounded_button"
        android:onClick="orderSummary"
        android:text="Summary" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="209dp"
        android:layout_marginRight="209dp"
        android:layout_marginBottom="289dp"
        android:text="Extra Cheese"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />
</RelativeLayout>
